--- a/hello.tex
+++ b/hello.tex
@@ -1,7 +1,7 @@
 %%
 %% This is file 'hello.tex'.
 %%
-%% Copyright (c) 2018,2019 Takayuki YATO (aka. "ZR")
+%% Copyright (c) 2018-2020 Takayuki YATO (aka. "ZR")
 %%   GitHub:   https://github.com/zr-tex8r
 %%   Twitter:  @zr_tex8r
 %%
@@ -45,9 +45,11 @@
       local s = "\luaescapestring{\luatexbanner}"
       if s:match("LuajitTeX") then tex.write("1")
       elseif s:match("HarfTeX") then tex.write("2")
+      elseif s:match("LuaHBTeX") then tex.write("3")
       else tex.write("0")
       end}\relax
     \or \let\my@engine=I % LuajitTeX
+    \or \let\my@engine=F % HarfTeX
     \or \let\my@engine=H % HarfTeX
     \fi
   \fi
@@ -74,7 +76,8 @@
   \else\ifx o\my@engine Lamed% forget about Lambda
   \else\ifx L\my@engine Lua\LaTeX
   \else\ifx I\my@engine Luajit\LaTeX
-  \else\ifx H\my@engine Harf\LaTeX
+  \else\ifx F\my@engine Lua\LaTeX\ (on Harf\TeX)%
+  \else\ifx H\my@engine Lua\LaTeX\ (on LuaHB\TeX)%
   \else\ifx X\my@engine \begingroup
       \my@lmodern X\kern-.125em\lower.5ex\hbox{\char"018E}%
       \kern-.075em\LaTeX
@@ -85,7 +88,7 @@
   \else\ifx j\my@engine
     \leavevmode\lower.5ex\hbox{J}\kern-.1em \LaTeX
   \else \LaTeX % good old...
-  \fi\fi\fi\fi\fi\fi\fi\fi\fi\fi}
+  \fi\fi\fi\fi\fi\fi\fi\fi\fi\fi\fi}
 
 %--------------------------------------- dvips or dvipdfmx
 
